# pytopoviz

./: README.md  pyproject.toml
docs/: index.rst
examples/: fig2d_t1.py  fig3d_t1.py
pytopoviz/: __init__.py  helper2d.py  helper2d_text.py  style2d.py
